* Added two brand new simplistic default skins.
* Qt 5 version of RSS Guard on Windows uses custom-built Qt libraries with lower memory footprint and less dependencies.
* Added main menu action to enable/disable feed. Can be also of course assigned to keyboard shortcut. (#755)
* Application log dialog has `Clear` button. (#1902)
* Ability to fast rename feeds and folders with `F2` keyboard shortcut. (#1998)
* Ability to copy selected article(s) data in a custom format. (#1591)
* Reddit plugin got many enhancements, including option of fetching full comments.
* Dependency on Qt `5compat` library is now removed and feed encoding conversions are handled either by simplified "QStringConverter" feature or full-blown ICU library, depending on RSS Guard build type and OS.
* `Fetch metadata` is now threaded and works if multiple feeds are selected at once.
* New main menu and article list context menu item `Reveal feed` which highlights the feed that the displayed article belongs to. (#1903)
* Feed list has new column `Item ID` which is hidden by default. Allows filtering feeds by their ID. (#966)
* External tools settings were redesigned and external tools can now be named. (#839)
* External tools now can be registered as default opening tool for domains. (#844)
* Ability to mark article above/below selected article as read/unread. (#244)
* New support for "RSS comments" specifications which is now per-feed configurable. (#878)
* Enclosures and attachments now can now be browsed, added, or removed via article filters. (#1024)
* Network proxy is now configurable even on a per-feed basis. So now we have per-feed, per-account and app-wide configuration options. (#417)
* New main menu items for focusing article preview, article list and feed list. (#1872)
* Added scrollable/paginated context menus where it makes sense. (#971)
* Turkish localization. (#1856)