@@ -164,6 +164,24 @@ QByteArray FeedReader::exportMessageFilters() const {
   return QJsonDocument(arr).toJson(QJsonDocument::JsonFormat::Indented);
 }
 
+void FeedReader::importMessageFilters(const QByteArray& data) {
+  QJsonParseError err;
+  const QJsonArray arr = QJsonDocument::fromJson(data, &err).array();
+
+  for (const QJsonValue& json_fltr_val : arr) {
+    const QJsonObject& json_fltr = json_fltr_val.toObject();
+    const QString name = TextFactory::ensureUniqueName(json_fltr.value(QSL("name")).toString(),
+                                                       qlinq::from(messageFilters())
+                                                         .select([](const MessageFilter* fl) {
+                                                           return fl->name();
+                                                         })
+                                                         .toList());
+    const QString script = json_fltr.value(QSL("script")).toString();
+
+    addMessageFilter(name, script);
+  }
+}
+
 void FeedReader::showMessageFiltersManager() {
   FormMessageFiltersManager manager(qApp->feedReader(),
                                     qApp->feedReader()->feedsModel()->serviceRoots(),
@@ -249,7 +267,7 @@ void FeedReader::loadSavedMessageFilters() {
 }
 
 MessageFilter* FeedReader::addMessageFilter(const QString& title, const QString& script) {
-  auto* fltr = qApp->database()->worker()->read<MessageFilter*>([&](const QSqlDatabase& db) {
+  auto* fltr = qApp->database()->worker()->write<MessageFilter*>([&](const QSqlDatabase& db) {
     return DatabaseQueries::addMessageFilter(db, title, script);
   });
 
